# timp

./: Doxyfile  TIMPClient.drawio  TIMPServer.drawio  TIMPUseCase.drawio
.github/workflows/: static.yml
client/: CMakeLists.txt  apiservice.cpp  apiservice.h  chatcontroller.cpp  chatcontroller.h  dialog.cpp  dialog.h  dialog.ui  emojiconverter.cpp  emojiconverter.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  messageformatter.cpp  messageformatter.h  networkmanager.cpp  networkmanager.h  testcontroller.cpp  testcontroller.h  tester.cpp  tester.h
docs/html/: annotated.html  annotated_dup.js  apiservice_8cpp.html  apiservice_8h.html  apiservice_8h.js  apiservice_8h_source.html  chatcontroller_8cpp.html  chatcontroller_8h.html  chatcontroller_8h.js  chatcontroller_8h_source.html  class_api_service-members.html  class_api_service.html  class_api_service.js  class_chat_controller-members.html  class_chat_controller.html  class_chat_controller.js  class_command_handler-members.html  class_command_handler.html  class_command_handler.js  class_database-members.html  class_database.html  class_database.js  class_dialog-members.html  class_dialog.html  class_dialog.js  class_emoji_converter-members.html  class_emoji_converter.html  class_login_window-members.html  class_login_window.html  class_login_window.js  class_message_formatter-members.html  class_message_formatter.html  class_server-members.html  class_server.html  class_server.js  class_test_controller-members.html  class_test_controller.html  classes.html  client_2main_8cpp.html  command__handler_8cpp.html  (+56 more)
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  functions_e.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js
server/: CMakeLists.txt
server/src/: main.cpp
server/src/database/: database.cpp  database.h
server/src/server/: command_handler.cpp  command_handler.h  server.cpp  server.h
timp/client/: CMakeLists.txt  dialog.cpp  dialog.h  emojiconverter.cpp  emojiconverter.h  loginwindow.cpp  loginwindow.h  main.cpp  messageformatter.h  networkmanager.cpp  networkmanager.h  tester.cpp  tester.h
